# pngav

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  Makefile  main.cpp  misc.h  pngav.rc  readme.md  readme.txt  registry.h  resource.h  spi.cpp  spi.h  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
docs/: building.md  todo.md
src/: CMakeLists.txt  compiler_specific.h  main.cpp  misc.h  pngav.rc  registry.cpp  registry.h  registry.hpp  resource.h  resource.rc  spi.cpp  spi.h  spi.hpp
src/additions/: debug_logging.hpp  readme.md  utilities.cpp  utilities.hpp  viewer_window.cpp  viewer_window.hpp  winapi_wrappers.cpp  winapi_wrappers.hpp  windows.hpp
src/additions/susie_plugins/: plugin_manager.cpp  plugin_manager.hpp
